--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<!--<app-login></app-login>-->
+<!--<app-signup></app-signup>-->
+
+<!-- Nav Bar -->
+<!--<app-navbar></app-navbar>-->
+
+<router-outlet></router-outlet>
+
+<!--<app-userhome></app-userhome>-->
+<!--<app-userpricing></app-userpricing>-->
+<!--<app-userbill></app-userbill>-->
