--- a/src/app/userpage/userhome/userhome.component.html
+++ b/src/app/userpage/userhome/userhome.component.html
@@ -27,21 +27,21 @@
       <tbody>
       <tr>
         <td>RR Number:</td>
-        <th>KL20997</th>
+        <th>{{userdata.rr_num}}</th>
         <td>Account ID:</td>
-        <th>3318501000</th>
+        <th>{{userdata.id}}</th>
       </tr>
       <tr>
         <td>Sanctioned Load:</td>
-        <th>0.70</th>
+        <th>{{userdata.sanct_load}}</th>
         <td>Tariff</td>
-        <th>5LT2A1-N</th>
+        <th>{{userdata.tariff}}</th>
       </tr>
       <tr>
         <td>Name:</td>
-        <th>KRISHNAKANTH GANAPATI SHANBHAG</th>
+        <th>{{userdata.name}}</th>
         <td>Address:</td>
-        <th>385/1385/1 BANDHAR ROAD KUMTA, KAR -581343</th>
+        <th>{{userdata.address}}</th>
       </tr>
       </tbody>
     </table>
