--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,15 +18,15 @@
       <!--<a class="nav-link" href="#">Unpaid Bills</a>-->
       <!--</li>-->
     </ul>
-    <ul class="navbar-nav p-0">
+    <ul class="navbar-nav p-0 dropleft">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Sudarshan K Shanbhag
+          {{userdata.name}}
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#exampleModal">Change Password</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Logout</a>
+          <a class="dropdown-item" (click)="Logout()">Logout</a>
           <!-- <a class="dropdown-item" href="#">Something else here</a> -->
         </div>
       </li>
