--- a/src/app/userauth/login/login.component.html
+++ b/src/app/userauth/login/login.component.html
@@ -12,7 +12,7 @@
         <form #f="ngForm" (ngSubmit)="LoginForm(f.value)">
           <div class="form-group">
             <label for="exampleInputAccountid">Account ID</label>
-            <input type="text" name="accountid" ngModel class="form-control" id="exampleInputAccountid" aria-describedby="emailHelp" placeholder="Account ID/ Aadhar Number">
+            <input type="text" name="id" ngModel class="form-control" id="exampleInputAccountid" aria-describedby="emailHelp" placeholder="Account ID/ Aadhar Number">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
@@ -20,7 +20,9 @@
           </div>
           <div class="form-group form-check">
           </div>
-
+          <div class="alert alert-danger" role="alert" *ngIf="error == 1">
+            Login Failed
+          </div>
           <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
@@ -29,6 +31,8 @@
             <div class="col-sm-4"></div>
           </div>
         </form>
+        <br>
+        <p> Not yet Signed In <a [routerLink]="['/signin']">Click Here!!</a></p>
       </div>
     </div>
     <div class="col-sm-3">
