--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -14,9 +14,9 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/chargesapplied']">Pricing</a>
       </li>
-      <!--<li class="nav-item">-->
-      <!--<a class="nav-link" href="#">Unpaid Bills</a>-->
-      <!--</li>-->
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/switchcontrol']">Switch Control</a>
+      </li>
     </ul>
     <ul class="navbar-nav p-0 dropleft">
       <li class="nav-item dropdown">
@@ -27,16 +27,11 @@
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#exampleModal">Change Password</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="Logout()">Logout</a>
-          <!-- <a class="dropdown-item" href="#">Something else here</a> -->
         </div>
       </li>
     </ul>
   </div>
 </nav>
-
-
-
-
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
